--- a/src/package.json
+++ b/src/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
-    "mini-css-extract-plugin": "^0.7.0"
+    "mini-css-extract-plugin": "^0.7.0",
+    "webpack": "^4.35.3"
   },
   "repository": {
     "type": "git",
