--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "import-glob": "^1.5.0",
     "next": "^9.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
